# clckwrks

./: .gitignore  .travis.yml  Acid.hs  Clckwrks.hs  ClckwrksMonad.hs  ClckwrksServer.hs  FormPart.hs  HsColour.hs  LICENSE  Main.hs  Markdown.hs  PageMapper.hs  README.md  Setup.hs  Types.hs  URL.hs  clckwrks.cabal  default.nix  shell.nix
.github/workflows/: haskell-ci.yml
Admin/: Console.hs  EditPage.hs  NewPage.hs  Route.hs  Template.hs  URL.hs
Clckwrks/: Acid.hs  BasicTemplate.hs  FormPart.hs  GetOpts.hs  IOThread.hs  Monad.hs  Plugin.hs  Route.hs  Server.hs  Types.hs  URL.hs  Unauthorized.hs
Clckwrks/Admin/: Console.hs  EditFeedConfig.hs  EditPage.hs  EditSettings.hs  NewPage.hs  Pages.hs  PreviewPage.hs  Route.hs  SystemEmails.hs  Template.hs  URL.hs  ViewUsers.hs
Clckwrks/Authenticate/: API.hs  Monad.hs  Plugin.hs  Plugin.hs-boot  Route.hs  URL.hs
Clckwrks/Authenticate/Page/: AuthModes.hs  ChangePassword.hs  CreateAccount.hs  ForgotPassword.hs  Login.hs  OpenIdRealm.hs  ResetPassword.hs  ViewUsers.hs
Clckwrks/JS/: ClckwrksApp.hs  Route.hs  URL.hs
Clckwrks/Markup/: HsColour.hs  Markdown.hs  Pandoc.hs
Clckwrks/Menu/: API.hs  Acid.hs  Edit.hs  EditMenu.hs  MenuState.hs  Types.hs
Clckwrks/NavBar/: API.hs  Acid.hs  EditNavBar.hs  Types.hs
Clckwrks/Page/: API.hs  Acid.hs  Atom.hs  PreProcess.hs  Types.hs
Clckwrks/ProfileData/: API.hs  Acid.hs  EditNewProfileData.hs  EditProfileData.hs  EditProfileDataFor.hs  Route.hs  Types.hs  URL.hs
HSP/: HTMLBuilder.hs
Markup/: HsColour.hs  Markdown.hs
Menu/: API.hs  Acid.hs  Edit.hs  Types.hs
Page/: API.hs  Acid.hs  Types.hs
ProfileData/: API.hs  Acid.hs  Route.hs  Types.hs  URL.hs
static/: admin.css
