Name:                clckwrks
Version:             0.18.3
Synopsis:            A secure, reliable content management system (CMS) and blogging platform
Description:         clckwrks (pronounced, clockworks) aims to compete
                     directly with popular PHP-based blogging and CMS
                     platforms. Clckwrks aims to support one-click
                     installation of plugins and themes. End users
                     should be able to use it with zero Haskell
                     knowledge. Haskell developers can extend clckwrks
                     by creating new plugins or by building sites
                     around the existing clckwrks core and plugins.
                     .
                     clckwrks is still in very early development. Not all features have been implement yet.
Homepage:            http://www.clckwrks.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
Copyright:           2012 SeeReason Partners LLC, Jeremy Shaw
Stability:           Experimental
Category:            Clckwrks
Build-type:          Custom
Cabal-version:       >=1.6
Data-Files:
    static/admin.css

source-repository head
    type:     darcs
    subdir:   clckwrks
    location: http://hub.darcs.net/stepcut/clckwrks

Library
  Build-tools:     hsx2hs
  Exposed-modules: Clckwrks
                   Clckwrks.Acid
                   Clckwrks.Admin.Template
                   Clckwrks.Admin.URL
                   Clckwrks.Admin.Console
                   Clckwrks.Admin.Route
                   Clckwrks.Admin.EditSettings
                   Clckwrks.BasicTemplate
                   Clckwrks.GetOpts
                   Clckwrks.IOThread
                   Clckwrks.Monad
                   Clckwrks.Server
                   Clckwrks.Markup.HsColour
                   Clckwrks.Markup.Markdown
                   Clckwrks.NavBar.Acid
                   Clckwrks.NavBar.API
                   Clckwrks.NavBar.EditNavBar
                   Clckwrks.NavBar.Types
                   Clckwrks.Plugin
                   Clckwrks.ProfileData.URL
                   Clckwrks.ProfileData.Route
                   Clckwrks.ProfileData.Types
                   Clckwrks.ProfileData.Acid
                   Clckwrks.ProfileData.API
                   Clckwrks.ProfileData.EditProfileData
                   Clckwrks.ProfileData.EditProfileDataFor
                   Clckwrks.Route
                   Clckwrks.Types
                   Clckwrks.Unauthorized
                   Clckwrks.URL
                   Paths_clckwrks

  Build-depends:
     acid-state                   >= 0.11 && < 0.12,
     aeson                        >= 0.5 && < 0.7,
     attoparsec                   == 0.10.*,
     base                           < 5,
     blaze-html                   >= 0.5 && < 0.7,
     bytestring                   >= 0.9 && < 0.11,
     containers                   >= 0.4 && < 0.6,
     directory                    >= 1.1 && < 1.3,
     filepath                     >= 1.2 && < 1.4,
     happstack-authenticate       == 0.10.*,
     happstack-hsp                == 7.2.*,
     happstack-server             >= 7.0 && < 7.4,
     happstack-server-tls         >= 7.0 && < 7.2,
     hsp                          == 0.9.*,
     hsx-jmacro                   == 7.3.*,
     ixset                        == 1.0.*,
     jmacro                       == 0.6.*,
     mtl                          >= 2.0 && < 2.3,
     network                      >= 2.3 && < 2.5,
     old-locale                   ==  1.0.*,
     process                      >= 1.0 && < 1.2,
--     plugins-auto == 0.0.1.1,
     random                       == 1.0.*,
     reform                       == 0.2.*,
     reform-happstack             == 0.2.*,
     reform-hsp                   >= 0.2 && < 0.3,
     safecopy                     >= 0.6,
     stm                          >= 2.2 && <2.5,
     tagsoup                      == 0.12.*,
     text                         == 0.11.*,
     time                         >= 1.2 && <1.5,
     uuid                         == 1.2.*,
     unordered-containers         >= 0.1 && < 0.3,
     utf8-string                  == 0.3.*,
     vector                       >= 0.9,
     web-plugins                  >= 0.1 && < 0.3,
     web-routes,
     web-routes-happstack,
     web-routes-hsp,
     web-routes-th                >= 0.21,
     xss-sanitize                 == 0.3.*

  -- Build-tools: hsx2hs
