Name:                clckwrks
Version:             0.23.9
Synopsis:            A secure, reliable content management system (CMS) and blogging platform
Description:         clckwrks (pronounced, clockworks) aims to compete
                     directly with popular PHP-based blogging and CMS
                     platforms. Clckwrks aims to support one-click
                     installation of plugins and themes. End users
                     should be able to use it with zero Haskell
                     knowledge. Haskell developers can extend clckwrks
                     by creating new plugins or by building sites
                     around the existing clckwrks core and plugins.
                     .
                     clckwrks is still in very early development. Not all features have been implement yet.
Homepage:            http://www.clckwrks.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
Copyright:           2012-2015 SeeReason Partners LLC, Jeremy Shaw
Stability:           Experimental
Category:            Clckwrks
Build-type:          Custom
Cabal-version:       >=1.6
Data-Files:
    static/admin.css

source-repository head
    type:     git
    location: git://github.com/clckwrks/clckwrks.git

flag network-uri
    description: Get Network.URI from the network-uri package
    default: True

Library
  Build-tools:     hsx2hs
  Exposed-modules: Clckwrks
                   Clckwrks.Acid
                   Clckwrks.Admin.Template
                   Clckwrks.Admin.URL
                   Clckwrks.Admin.Console
                   Clckwrks.Admin.Route
                   Clckwrks.Admin.EditSettings
                   Clckwrks.Authenticate.Page.ChangePassword
                   Clckwrks.Authenticate.Page.Login
                   Clckwrks.Authenticate.Page.OpenIdRealm
                   Clckwrks.Authenticate.Page.ResetPassword
                   Clckwrks.Authenticate.Plugin
                   Clckwrks.Authenticate.Route
                   Clckwrks.Authenticate.URL
                   Clckwrks.BasicTemplate
                   Clckwrks.GetOpts
                   Clckwrks.IOThread
                   Clckwrks.JS.ClckwrksApp
                   Clckwrks.JS.Route
                   Clckwrks.JS.URL
                   Clckwrks.Monad
                   Clckwrks.Server
                   Clckwrks.Markup.HsColour
                   Clckwrks.Markup.Markdown
                   Clckwrks.Markup.Pandoc
                   Clckwrks.NavBar.Acid
                   Clckwrks.NavBar.API
                   Clckwrks.NavBar.EditNavBar
                   Clckwrks.NavBar.Types
                   Clckwrks.Plugin
                   Clckwrks.ProfileData.URL
                   Clckwrks.ProfileData.Route
                   Clckwrks.ProfileData.Types
                   Clckwrks.ProfileData.Acid
                   Clckwrks.ProfileData.API
                   Clckwrks.ProfileData.EditProfileData
                   Clckwrks.ProfileData.EditNewProfileData
                   Clckwrks.ProfileData.EditProfileDataFor
                   Clckwrks.Route
                   Clckwrks.Types
                   Clckwrks.Unauthorized
                   Clckwrks.URL
                   Paths_clckwrks
  Extra-Libraries:   ssl
--  if !os(darwin)
--      Extra-Libraries: cryptopp

  if flag(network-uri)
     build-depends:               network > 2.6      && < 2.7,
                                  network-uri >= 2.6 && < 2.7
  else
     build-depends:               network < 2.6

  Build-depends:
     acid-state                   >= 0.12 && < 0.13,
     aeson                        >= 0.5  && < 0.10,
     aeson-qq                     >= 0.7  && < 0.9,
     attoparsec                   >= 0.10 && < 0.14,
     base                                    < 5,
     blaze-html                   >= 0.5  && < 0.9,
     bytestring                   >= 0.9  && < 0.11,
     cereal                       >= 0.4  && < 0.5,
     containers                   >= 0.4  && < 0.6,
     directory                    >= 1.1  && < 1.3,
     filepath                     >= 1.2  && < 1.5,
     happstack-authenticate       >= 2.2  && < 2.3,
     happstack-hsp                == 7.3.*,
     happstack-jmacro             >= 7.0  && < 7.1,
     happstack-server             >= 7.0  && < 7.5,
     happstack-server-tls         >= 7.1  && < 7.2,
     hsp                          >= 0.9  && < 0.11,
     hsx-jmacro                   == 7.3.*,
     hsx2hs                       >= 0.13 && < 0.14,
     ixset                        == 1.0.*,
     jmacro                       == 0.6.*,
     lens                         >= 4.3  && < 4.13,
     mtl                          >= 2.0  && < 2.3,
     old-locale                   ==  1.0.*,
     process                      >= 1.0  && < 1.3,
--     plugins-auto == 0.0.1.1,
     random                       >= 1.0  && < 1.2,
     reform                       == 0.2.*,
     reform-happstack             == 0.2.*,
     reform-hsp                   >= 0.2  && < 0.3,
     safecopy                     >= 0.6,
     stm                          >= 2.2  && <2.5,
     tagsoup                      >= 0.12 && < 0.14,
     text                         >= 0.11 && < 1.3,
     time                         >= 1.2  && < 1.6,
     time-locale-compat           >= 0.1  && < 0.2,
     uuid                         >= 1.2  && < 1.4,
     unordered-containers         >= 0.1  && < 0.3,
     userid                       >= 0.1  && < 0.2,
     utf8-string                  >= 0.3  && < 1.1,
     vector                       >= 0.9,
     web-plugins                  >= 0.1  && < 0.3,
     web-routes,
     web-routes-happstack,
     web-routes-hsp,
     web-routes-th                >= 0.21,
     xss-sanitize                 == 0.3.*

  -- Build-tools: hsx2hs
